--- a/m2/class-express/views/index.ejs
+++ b/m2/class-express/views/index.ejs
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
   <h1>hello <%= user %></h1>
   <% if (isAdmin) { %>
     <h3>hola eres admin</h3>
@@ -19,6 +9,4 @@
       <li><%= city %></li>
     <% }) %>
   </ul>
-  <script src="main.js"></script>
-</body>
-</html>
+  <%- include('partials/footer') %>
